error-prone: ClassNewInstance fixes